      Jagan}'s \PR{18795}.

      \item Informational messages of e.g., \code{print(1:1e4, max=1000)},
      now correctly mention \code{max} in addition to
      \code{getOption("max.print")}.

      \item \pkg{methods}' internal \code{.requirePackage()} now re-enables
      primitive method dispatch when needed; thanks to \I{Ivan Krylov}
      for demystifying CRAN package check failures on the R*devel mailing
      lists.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.1 patched}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The S-compatibility macros \code{F77_COM} and
      \code{F77_COMDECL} defined in header \file{R_ext/RS.h} are
      deprecated and will be removed shortly.  We could find no record
      of their use.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \I{Mathlib} function \code{lgammacor(x)} no longer warns about
      underflow to zero for large \code{x}.

      \item Text widths and heights were incorrectly reported by the
      Quartz device if the drawing context didn't exist yet (typically
      when drawing off-screen to a window that is yet to appear, see
      \PR{18591}).

      \item The Quartz device could segfault in cases where paths with
      spaces are used in the new glyph drawing API.
      Thanks to \I{Tomek Gieorgijewski} (\PR{18758}).

      \item On macOS in R CRAN builds, it is again possible to read
      little-endian UTF-16 text with a \abbr{BOM} from a connection using
      \code{encoding="UTF-16"}.  Users building R from source should avoid
      using the system \code{libiconv} in macOS 14.1 and later.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.1}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Functions \code{R_atof} and \code{R_strtod} declared in
      header \file{R_ext/Utils.h} are now documented in
      \sQuote{Writing R Extensions} and so formally part of the API.

      \item The non-API entry points \code{Rf_setSVector},