@@ -25,7 +25,7 @@ colSums <- function(x, na.rm = FALSE, dims = 1L)
     if(is.data.frame(x)) x <- as.matrix(x)
     if(!is.array(x) || length(dn <- dim(x)) < 2L)
         stop("'x' must be an array of at least two dimensions")
-    if(dims < 1L || dims > length(dn) - 1L)
+    if(length(dims) != 1L || dims < 1L || dims > length(dn) - 1L)
         stop("invalid 'dims'")
     n <- prod(dn[id <- seq_len(dims)])
     dn <- dn[-id]
@@ -45,7 +45,7 @@ colMeans <- function(x, na.rm = FALSE, dims = 1L)
     if(is.data.frame(x)) x <- as.matrix(x)
     if(!is.array(x) || length(dn <- dim(x)) < 2L)
         stop("'x' must be an array of at least two dimensions")
-    if(dims < 1L || dims > length(dn) - 1L)
+    if(length(dims) != 1L || dims < 1L || dims > length(dn) - 1L)
         stop("invalid 'dims'")
     n <- prod(dn[id <- seq_len(dims)])
     dn <- dn[-id]
@@ -65,7 +65,7 @@ rowSums <- function(x, na.rm = FALSE, dims = 1L)
     if(is.data.frame(x)) x <- as.matrix(x)
     if(!is.array(x) || length(dn <- dim(x)) < 2L)
         stop("'x' must be an array of at least two dimensions")
-    if(dims < 1L || dims > length(dn) - 1L)
+    if(length(dims) != 1L || dims < 1L || dims > length(dn) - 1L)
         stop("invalid 'dims'")
     p <- prod(dn[-(id <- seq_len(dims))])
     dn <- dn[id]
@@ -85,7 +85,7 @@ rowMeans <- function(x, na.rm = FALSE, dims = 1L)
     if(is.data.frame(x)) x <- as.matrix(x)
     if(!is.array(x) || length(dn <- dim(x)) < 2L)
         stop("'x' must be an array of at least two dimensions")
-    if(dims < 1L || dims > length(dn) - 1L)
+    if(length(dims) != 1L || dims < 1L || dims > length(dn) - 1L)
         stop("invalid 'dims'")
     p <- prod(dn[-(id <- seq_len(dims))])
     dn <- dn[id]
